# AARTZE

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  ECSInit.hpp  FOLDERSARCHITECTURE  README.md  aartze_imgui.ini  bootstrap.ps1  imgui.ini  main.cpp  temp_view.txt  vcpkg.json
AARTZE/World/: MeshRegistry.hpp  TextureRegistry.hpp  ZoneRegistry.hpp
AARTZE/ai_worldgen/: LearningDB.cpp  LearningDB.hpp  README.md  WorldGenerator.cpp  WorldGenerator.hpp  training_utils.py
AARTZE/audio/: AudioSystem.cpp  AudioSystem.hpp
AARTZE/components/: AIComponent.hpp  AimingComponent.hpp  AnimationComponent.hpp  AnimationStateComponent.hpp  CollisionComponent.hpp  DecalComponent.hpp  DrivingComponent.hpp  EnvironmentLightingComponent.hpp  HealthComponent.hpp  InputComponent.hpp  InteractableComponent.hpp  InventoryComponent.hpp  MaterialComponent.hpp  MoneyComponent.hpp  PositionComponent.hpp  RagdollComponent.hpp  ReflectionProbeComponent.hpp  RenderableComponent.hpp  ScriptComponent.hpp  SkeletalMeshComponent.hpp  SkeletonComponent.hpp  SneakingComponent.hpp  StaminaComponent.hpp  StatusEffectComponent.hpp  TagComponents.hpp  TrailEffectComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp  WantedLevelComponent.hpp  WeaponComponent.hpp
AARTZE/components/animation/: AnimationBlendComponent.hpp
AARTZE/components/environment/: PuddleComponent.hpp  RainAudioComponent.hpp  RainOcclusionComponent.hpp  RainRipplesComponent.hpp  ScreenWetnessEffectComponent.hpp  TireSplashComponent.hpp
AARTZE/components/navigation/: NavAgentComponent.hpp
AARTZE/components/physics/: BoxColliderComponent.hpp  RigidBodyComponent.hpp  SphereColliderComponent.hpp
AARTZE/core/: Application.cpp  Application.hpp  ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  ECSPreset.hpp  Entity.hpp  EntityManager.hpp  MemoryManager.hpp  Profiler.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp  ThreadPool.hpp  Types.hpp
AARTZE/editor/: AartzeEditor.cpp  AartzeEditor.h  Console.cpp  Console.hpp  ContentBrowser.cpp  ContentBrowser.hpp  EditorActions.cpp  EditorActions.hpp  EditorState.cpp  EditorState.hpp  InspectorWidgets.cpp  InspectorWidgets.hpp  NavWidgets.cpp  NavWidgets.hpp  NodeGraph.cpp  NodeGraph.hpp  ProjectBrowser.cpp  ProjectBrowser.hpp  ProjectManager.cpp  ProjectManager.hpp  Reflection.cpp  Reflection.hpp  ReflectionBuiltin.cpp  ReflectionBuiltin.hpp  Renderer.cpp  Renderer.h  ThumbnailCache.cpp  ThumbnailCache.hpp  Toasts.cpp  Toasts.hpp  app_main.cpp
AARTZE/input/: InputHandler.cpp  InputHandler.hpp
AARTZE/navigation/: GridNav.cpp  GridNav.hpp
AARTZE/platform/win/: FileDialog.cpp  FileDialog.hpp
AARTZE/runtime/: GLMesh.cpp  GLMesh.h  Importer.cpp  Importer.h  Mesh.h  Scene.h
AARTZE/save/: SaveSystem.cpp  SaveSystem.hpp
AARTZE/scripting/: LuaVM.cpp  LuaVM.hpp
AARTZE/systems/AimingSystem/: AimingSystem.cpp  AimingSystem.hpp
AARTZE/systems/AnimationSystem/: AnimationSystem.cpp  AnimationSystem.hpp
AARTZE/systems/DecalSystem/: DecalSystem.cpp  DecalSystem.hpp
AARTZE/systems/NavigationSystem/: NavigationSystem.cpp  NavigationSystem.hpp
AARTZE/systems/PhysicsSystem/: PhysicsSystem.cpp  PhysicsSystem.hpp
AARTZE/systems/RenderingSystem/: DeferredRenderer.cpp  DeferredRenderer.hpp  Fullscreen.hpp  GBuffer.cpp  GBuffer.hpp  RenderResources.cpp  RenderResources.hpp  RenderSettings.cpp  RenderSettings.hpp  (+2 more)
AARTZE/ui2/: Dock.cpp  Dock.hpp  EditorShell.cpp  EditorShell.cpp.bak  EditorShell.hpp  Panels.cpp  Panels.hpp  RendererGL.cpp  RendererGL.hpp  SlotPreview.cpp  SlotPreview.hpp  StyleSet.cpp  StyleSet.hpp  Viewport.cpp  Viewport.hpp  Widget.hpp
AARTZE/ui_slot/: Border.hpp  Canvas.hpp  Core.hpp  Enums.hpp  Geometry.hpp  Grid.hpp  Overlay.hpp  Primitives.hpp  SizeBox.hpp  Spacer.hpp  StackPanel.hpp  UniformGrid.hpp
AARTZE/utils/: AssetLoader.hpp  Base64.hpp  CameraPathLoader.hpp  MeshUtils.hpp  ScriptLoader.cpp  ScriptLoader.hpp  SkeletonUtils.hpp  StateUtils.hpp
build312/: AARTZE.sln  AARTZE.vcxproj  AARTZE.vcxproj.filters  AARTZE_ImGuiDemo.vcxproj  AARTZE_ImGuiDemo.vcxproj.filters  AARTZE_imgui_editor.vcxproj  AARTZE_imgui_editor.vcxproj.filters  AARTZE_lib.vcxproj  AARTZE_lib.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ImGuizmo.vcxproj  ImGuizmo.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters  imnodes_lib.vcxproj  imnodes_lib.vcxproj.filters
build312/python_bindings/: aartzepy.vcxproj  aartzepy.vcxproj.filters  run_editor.vcxproj  run_editor.vcxproj.filters
docs/: AARTZE_UI_Vision.md  RAWSIM_Playbook.md  SlotUI_Plan.md  Slot_Concept_Map.md
editor_py/: README.md  aartze.qss  main.py  theme.qss
editor_py/widgets/: codeview.py  nodegraph.py  outliner.py  properties.py  viewport.py
python_bindings/: CMakeLists.txt  aartzepy.cpp
scripts/: setup_env.ps1  setup_env.sh
src/aartze/: CMakeLists.txt
src/aartze/animation/: CMakeLists.txt  Rig.cpp  Rig.h
src/aartze/core/: CMakeLists.txt  Log.cpp  Log.h  Platform.h
src/aartze/ecs/: CMakeLists.txt  Components.h  Scene.cpp  Scene.h
src/aartze/geometry/: BVH.cpp  BVH.h  CMakeLists.txt  HalfEdgeMesh.cpp  HalfEdgeMesh.h  MeshOps.cpp  MeshOps.h
src/aartze/import/: AssimpImporter.cpp  CMakeLists.txt  Importer.cpp  Importer.h
src/aartze/input/: CMakeLists.txt  InputSystem.cpp  InputSystem.h
src/aartze/math/: CMakeLists.txt  Math.h
src/aartze/physics/: CMakeLists.txt  Physics.cpp  Physics.h
src/aartze/render/: CMakeLists.txt  Renderer.cpp
src/aartze/render/rhi/: GLRHI.cpp  RHI.h
src/aartze/render/scene/: GizmoRenderer.cpp  GizmoRenderer.h  Renderer.h
src/aartze/scripting/: CMakeLists.txt  PyBridge.cpp  PyBridge.h
tools/python_editor/: dev.py  main.py  pyproject.toml  requirements.txt  widgets.py
tools/python_editor/aartze_editor/: __init__.py  __main__.py  app.py  icons.py  inspector.py  monaco.html  outliner.py  viewport.py
tools/python_editor/aartze_editor/graph/: graph.py
tools/python_editor/aartze_editor/qss/: aartze_dark.qss
tools/python_editor/aartze_editor/resources/: aartze_icons.qrc
(+39 files in other folders)
